# Sight

./: CMakeLists.txt
assets/models/plasmaSword/: license.txt  scene.gltf
assets/shaders/: basic.frag  basic.vert  light.frag  skybox.frag  skybox.vert
src/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Configuration.hpp  Cubemap.cpp  Cubemap.hpp  Drawable.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  NonCopyable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/tests/: Test.cpp  Test.hpp  Test3DCube.hpp  TestClearColor.cpp  TestClearColor.hpp  TestTexture2D.cpp  TestTexture2D.hpp  TestsLibrary.cpp  TestsLibrary.hpp
